--- a/components/nav-west.module.css
+++ b/components/nav-west.module.css
@@ -3,8 +3,7 @@
   min-height: 100vh;
   width: 16.66%;
   text-align: center;
-  padding-top: 95vh;
-  color: white;
+  color: hsl(0, 0%, 98%);
 }
 
 .container:hover {
@@ -12,9 +11,27 @@
 }
 
 .signOutBtn {
-  color: white;
+  color: hsl(0, 0%, 98%);
 }
 
 .signOutBtn:hover {
   color: hsl(0, 0%, 62%);
 }
+
+.signOutContainer {
+  padding-top: 88vh;
+}
+
+.userInfoContainer {
+  padding-top: 2vh;
+  color:hsl(0, 0%, 98%);
+}
+
+.userInfoContainer > div {
+  padding: .2em;
+}
+
+.userInfoContainer:hover {
+  color: hsl(0, 0%, 62%)
+}
+
